force-app/main/default/objects/SurveyConfig__mdt/SurveyConfig__mdt.object-meta.xml
<CustomObject>
    <label>Survey Config</label>
    <pluralLabel>Survey Configs</pluralLabel>
</CustomObject>