force-app/main/default/objects/SurveyConfig__mdt/fields/SendSurveyOnce__c.field-meta.xml
<CustomField>
    <fullName>SendSurveyOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Survey Once</label>
    <type>Checkbox</type>
</CustomField>