force-app/main/default/objects/SurveyConfig__mdt/fields/SurveyIndicatorAPIName__c.field-meta.xml
<CustomField>
    <fullName>SurveyIndicatorAPIName__c</fullName>
    <label>Survey Indicator API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>