force-app/main/default/objects/SurveyConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>SurveyIndicatorAPIName__c</columns>
    <columns>Active__c</columns>
    <columns>SendSurveyOnce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>